Mon Jul 25 13:35:20 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* backport r32658 from trunk.

	* ext/openssl/ossl_ssl.c (ossl_ssl_shutdown): Avoid randomly generated 
	  SSLError from SSLSocket just after invoking SSLSocket#close. 
	  OpenSSL's SSL_shutdown could try to send alert packet and it might 
	  set SSLerr(global error stack) as the result. It causes the next
	  SSL read/write operation to fail by unrelated reason.

	  By design, we're ignoring any error at SSL_shutdown() so we clear 
	  global error stack after SSL_shutdown is called. See #5039.

Sun Jul 24 20:29:53 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: refine the recvmsg test.

Sun Jul 24 20:02:31 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: fix the recvmsg test.

Sun Jul 24 08:42:51 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: test recvmsg allocates file descriptors for
	  fd passing even with MSG_PEEK.

	* ext/socket/ancdata.c: use the above test result.

Sun Jul 24 01:24:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Restore behavior of
	  Gem::Specification#loaded.  [Ruby 1.9 - Bug #5032]

Sun Jul 24 01:14:49 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/rake/test_rake_functional.rb (setup): Use __FILE__ for the base
	  directory. Current directory is not the top source directory when
	  the building process runs on other than there.

	* test/rake/test_rake_rake_test_loader.rb: ditto.

	* test/rake/test_rake_task_argument_parsing.rb
	  (test_terminal_width_using_hardcoded_80): hardcoded 80 is used
	  when app.unix? is false.

Sun Jul 24 00:42:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in: change the default compiler to gcc-4.2 if target os
	  is OS X 10.7 (Lion).

Sat Jul 23 17:06:25 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_update_max_fd): validate fd.

	* ext/socket/rubysocket.h (rsock_discard_cmsg_resource): add
	  msg_peek_p argument for the declaration.
