@@ -1,9 +1,1 @@
-module OpenSSL
-  module X509
-    class StoreContext
-      def cleanup
-        warn "(#{caller.first}) OpenSSL::X509::StoreContext#cleanup is deprecated with no replacement" if $VERBOSE
-      end
-    end
-  end
-end
+require 'openssl'
